--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
+  margin: 0;
 }
 
 a {
@@ -18,4 +23,50 @@ nav a {
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+.grid {
+  width: 100%;
+}
+
+.grid:after {
+  content: '';
+  display: block;
+  clear: both;
+}
+
+.grid-sizer, .grid-item {
+  width: 20%;
+}
+
+.type_text {
+  background-color: red;
+  color: #fff;
+}
+
+.type_text p {
+  display: inline-block;
+  padding: 0 20px;
+  margin: 0;
+  font-size: 20px;
+  font-family: Georgia, serif;
+}
+
+.quote_start {
+  float: left;
+  position: relative;
+  display: block;
+  top: 12px;
+  left: 8px;
+  font-size: 36px;
+  line-height: 23px;
+}
+
+.quote_end {
+  float: right;
+  display: block;
+  position: relative;
+  right: 8px;
+  font-size: 36px;
+  line-height: 23px;
 }
