--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+html, body{
+  margin: 0;
+}
+
 body {
   font-family: sans-serif;
 }
@@ -10,12 +14,66 @@ label {
   display: block;
 }
 
-nav a {
-  display: inline-block;
-  margin: 1em;
-}
 
 form div {
   margin: 1em;
   display: inline-block;
+}
+
+nav{
+  margin: 0
+}
+
+a {
+  color: inherit;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+.navBarContainer {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.navBarHeader{
+  margin-left: 5px;
+}
+
+.navBarLoginButtonContainer, .navBarLoggedInButtonContainer{
+  margin: auto 0;
+}
+
+.navBarButtonList{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  padding: 0 2em;
+}
+
+.navbarButton{
+  padding: 0 .5em;
+}
+
+
+.navModal{
+  background-color: #fff;
+  border-radius: 5px;
+  max-width: 500px;
+  min-height: 300px;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+.navModalBackdrop{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0,0,0,0.3);
+  padding: 50px;
 }
