--- a/public/style.css
+++ b/public/style.css
@@ -61,7 +61,7 @@ a:hover{
 }
 
 
-.navModal{
+.navModal, .dashboard-Modal{
   background-color: #fff;
   border-radius: 5px;
   max-width: 500px;
@@ -70,7 +70,7 @@ a:hover{
   padding: 30px;
 }
 
-.navModalBackdrop{
+.navModalBackdrop, .dashboard-Modal-Backdrop{
   position: fixed;
   top: 0;
   bottom: 0;
