--- a/public/style.css
+++ b/public/style.css
@@ -21,12 +21,23 @@ a:hover {text-decoration: underline;}
 .navModalBackdrop, .dashboard-Modal-Backdrop { position: fixed; top: 0; bottom: 0; left: 0; right: 0; background-color: rgba(0,0,0,0.3); padding: 50px; }
 
 /* Home page */
-
 #greeting {text-align: center;padding: 60px 0 0 0 }
 
 
 .type_text { background-color: red; color: #fff; }
 .type_text { padding: 20px 22px; margin: 0; font-size: 18px; line-height: 24px; font-family: Georgia, serif; }
+
+/* Dashboard */
+.title {font-weight:normal; font-size: 0.8em;}
+.table_row td {padding: 5px 10px; background-color:#eee}
+.btn {padding: 10px; background-color: #000;display:block;float:left; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;}
+.btn:hover {background-color: #555; text-decoration: none}
+.modal_btns {display: flex;}
+.dashboard-EventList-Container {display:flex;}
+
+/* Events */
+
+/* Mosaic */
 .quote_start { font-size: 24px; line-height: 24px; }
 .quote_end { font-size: 24px; line-height: 24px; }
 
