--- a/public/style.css
+++ b/public/style.css
@@ -12,6 +12,7 @@ a:hover {text-decoration: underline;}
   
 /* Nav */
 #logo {font-family: 'Rammetto One', cursive; font-size: 2em;line-height: 1.2em;padding: 0 0 0 10px;}
+#logo_link:hover {text-decoration: none; color: #ddd;}
 .navBarContainer { margin: 0; display: flex; flex-direction: row; justify-content: space-between; background-color: #000; color: #fff; }
 .navBarHeader {margin-left: 5px;}
 .navBarLoginButtonContainer, .navBarLoggedInButtonContainer {margin: auto 0;}
@@ -21,8 +22,7 @@ a:hover {text-decoration: underline;}
 .navModalBackdrop, .dashboard-Modal-Backdrop { position: fixed; top: 0; bottom: 0; left: 0; right: 0; background-color: rgba(0,0,0,0.3); padding: 50px; }
 
 /* Home page */
-#greeting {text-align: center;padding: 60px 0 0 0 }
-
+#greeting {text-align: center;padding: 60px 0 0 0;font-family: 'Rammetto One', cursive; font-size: 2.4em;width: 60%; margin:0 auto;}
 
 .type_text { background-color: red; color: #fff; }
 .type_text { padding: 20px 22px; margin: 0; font-size: 18px; line-height: 24px; font-family: Georgia, serif; }
@@ -30,12 +30,18 @@ a:hover {text-decoration: underline;}
 /* Dashboard */
 .title {font-weight:normal; font-size: 0.8em;}
 .table_row td {padding: 5px 10px; background-color:#eee}
-.btn {padding: 10px; background-color: #000;display:block;float:left; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;}
+.btn {width: 110px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;}
 .btn:hover {background-color: #555; text-decoration: none}
+#btn_addParticipantEvent {width: 160px;}
 .modal_btns {display: flex;}
 .dashboard-EventList-Container {display:flex;}
 
+/* Modals */
+
 /* Events */
+#event_add_contact_to_event {display:flex;}
+#event_participants_list {display:flex;}
+
 
 /* Mosaic */
 .quote_start { font-size: 24px; line-height: 24px; }
