--- a/public/style.css
+++ b/public/style.css
@@ -30,7 +30,8 @@ a:hover {text-decoration: underline;}
 /* Dashboard */
 .title {font-weight:normal; font-size: 0.8em;}
 .table_row td {padding: 5px 10px; background-color:#eee}
-.btn {width: 110px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;}
+#imageToUpload {display:none;}
+.btn {width: 110px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none}
 .btn:hover {background-color: #555; text-decoration: none}
 #btn_addParticipantEvent {width: 160px;}
 .modal_btns {display: flex;}
@@ -42,6 +43,8 @@ a:hover {text-decoration: underline;}
 #event_add_contact_to_event {display:flex;}
 #event_participants_list {display:flex;}
 
+/* Upload */
+.mobile_toggle {display:none;}
 
 /* Mosaic */
 .quote_start { font-size: 24px; line-height: 24px; }
@@ -56,5 +59,11 @@ a:hover {text-decoration: underline;}
 
 
 /*================================= Mobile ====================================*/
-@media only screen and (max-width:600px) {}
+@media only screen and (max-width:600px) {
+  .mobile_toggle {display:block;display:flex;}
+  .mobile_toggle_active {flex-grow:1;background-color:orangered;text-align: center;padding:20px}
+  .mobile_toggle_disabled {flex-grow:1;background-color:gray;text-align: center;padding:20px}
+
+
+}
  
