--- a/public/style.css
+++ b/public/style.css
@@ -29,13 +29,18 @@ a:hover {text-decoration: underline;}
 
 /* Dashboard */
 .title {font-weight:normal; font-size: 0.8em;}
-.table_row td {padding: 5px 10px; background-color:#eee}
+.table_row td {padding: 5px 10px;}
+.td_eventName {background-color:#eee;}
+.td_eventGo {background-color:orangered;color:white;}
 #imageToUpload {display:none;}
 .btn {width: 110px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none}
 .btn:hover {background-color: #555; text-decoration: none}
-#btn_addParticipantEvent {width: 160px;}
+#btn_addParticipantEvent {width: 160px;margin-left:0px !important;}
 .modal_btns {display: flex;}
 .dashboard-EventList-Container {display:flex;}
+#event_add_contact_to_event .btn {
+margin-left: 10px;}
+.section_header {margin: 50px 0 10px 0;display:flex}
 
 /* Modals */
 
