--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ a:hover {text-decoration: underline;}
 
   /* Globals */
 .wrapper {margin: 0 auto; width: 80%;}
-  
+
 /* Nav */
 #logo {font-family: 'Rammetto One', cursive; font-size: 2em;line-height: 1.2em;padding: 0 0 0 10px;}
 #logo_link:hover {text-decoration: none; color: #ddd;}
@@ -38,6 +38,7 @@ a:hover {text-decoration: underline;}
 .dashboard-EventList-Container {display:flex;}
 
 /* Modals */
+#sign_up_header {color: black}
 
 /* Events */
 #event_add_contact_to_event {display:flex;}
@@ -66,4 +67,3 @@ a:hover {text-decoration: underline;}
 
 
 }
- 
