--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
-html, body { margin: 0; box-sizing: border-box; }
-body { font-family: 'Roboto',sans-serif; margin: 0; font-size: 14px }
+html, body { margin: 0; }
+body { font-family: 'Roboto',sans-serif; margin: 0; font-size: 14px; box-sizing: border-box; }
 img {image-orientation: from-image}
 a {text-decoration: none;}
 label {display: block;}
@@ -11,28 +11,40 @@ a:hover {text-decoration: underline;}
   /* Globals */
 .wrapper {margin: 0 auto; width: 80%;}
 
+/* Home page */
+#greeting {text-align: center;padding: 40px 0 0 0;font-family: 'Rammetto One', cursive; font-size: 1.9em;width: 80%; margin:0 auto;}
+#headline {color: orangered;display:block;padding: 0 0 20px 0;font-size: 1.2em;}
+
 /* Nav */
-#logo {font-family: 'Rammetto One', cursive; font-size: 2em;line-height: 1.2em;padding: 0 0 0 10px;}
+#logo {font-family: 'Merienda One', cursive; font-size: 2em;line-height: 1.2em;padding: 0 0 0 10px;}
 #logo_link:hover {text-decoration: none; color: #ddd;}
 .navBarContainer { margin: 0; display: flex; flex-direction: row; justify-content: space-between; background-color: #000; color: #fff; }
 .navBarHeader {margin-left: 5px;}
 .navBarLoginButtonContainer, .navBarLoggedInButtonContainer {margin: auto 0;}
 .navBarButtonList { list-style: none; display: flex; flex-direction: row; padding: 0 2em; }
 .navbarButton {padding: 0 .5em;}
-.navModal, .dashboard-Modal { background-color: #fff; border-radius: 5px; max-width: 500px; min-height: 300px; margin: 0 auto; padding: 30px; }
-.navModalBackdrop, .dashboard-Modal-Backdrop { position: fixed; top: 0; bottom: 0; left: 0; right: 0; background-color: rgba(0,0,0,0.3); padding: 50px; }
 
 /* Login */
-.login-Form-Container {color: #000;}
+.login-Form-Container {color: #000; }
 .navModal {position: relative;}
 .signup-Form-Container {color: #000;}
 
-/* Home page */
-#greeting {text-align: center;padding: 40px 0 0 0;font-family: 'Rammetto One', cursive; font-size: 1.9em;width: 80%; margin:0 auto;}
-#headline {color: orangered;display:block;padding: 0 0 20px 0;font-size: 1.2em;}
+/* Modals */
+.modals {width: 280px;}
+.navModal, .dashboard-Modal { background-color: #fff; border-radius: 5px; max-width: 280px; margin: 0 auto; padding: 10px 20px; }
+.modal_header {font-size: 1.1em}
+.dashboard-Modal {position: relative;}
+.btn_close {border: none;
+  background: transparent !important; position:absolute; right:6px;top:6px;}
+.btn_close:before {content: "X"; display: relative; top:0; right:0;font-size: 16px; color: gray; outline:none;}
+.btn_area {display:flex; margin:20px 0 0 0;}
+.navModalBackdrop, .dashboard-Modal-Backdrop { position: fixed; top: 0; bottom: 0; left: 0; right: 0; background-color: rgba(0,0,0,0.3); padding: 50px; }
+.form_row {margin:14px 0;width:100%;display:table;font-size:1.1em;}
+.form_row label {display:table-cell;}
+.form_row input {display:table-cell;outline:none;width:100%;border:1pm #bbb solid;padding: 4px 6px;box-sizing:border-box;}
 
 .type_text { background-color: red; color: #fff; }
-.type_text { padding: 20px 22px; margin: 0; font-size: 18px; line-height: 24px; font-family: Georgia, serif; }
+.type_text { padding: 20px 22px; margin: 0; font-size: 18px; line-height: 24px; font-family: Georgia, serif;}
 
 /* Dashboard */
 .title {font-weight:normal; font-size: 0.8em;}
@@ -40,7 +52,7 @@ a:hover {text-decoration: underline;}
 .td_eventName {background-color:#eee;}
 .td_eventGo {background-color:orangered;color:white;}
 #imageToUpload {display:none;}
-.btn {width: 110px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none}
+.btn {width: 160px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none; font-size:1em;}
 .btn:hover {background-color: #555; text-decoration: none}
 #btn_addParticipantEvent {width: 160px;margin-left:0px !important;}
 .modal_btns {display: flex;}
@@ -48,13 +60,6 @@ a:hover {text-decoration: underline;}
 #event_add_contact_to_event .btn {
 margin-left: 10px;}
 .section_header {margin: 50px 0 10px 0;display:flex}
-
-/* Modals */
-.dashboard-Modal {position: relative;}
-.btn_close {border: none;
-  background: transparent !important; position:absolute; right:6px;top:6px;}
-.btn_close:before {content: "X"; display: relative; top:0; right:0;font-size: 20px; color: gray; outline:none;}
-.btn_area {display:flex}
 
 /* Events */
 #event_add_contact_to_event {display:flex;}
