--- a/public/style.css
+++ b/public/style.css
@@ -42,16 +42,19 @@ a:hover {text-decoration: underline;}
 .form_row {margin:14px 0;width:100%;display:table;font-size:1.1em;}
 .form_row label {display:table-cell;}
 .form_row input {display:table-cell;outline:none;width:100%;border:1pm #bbb solid;padding: 4px 6px;box-sizing:border-box;}
-
+.form_row td .btn {padding: 4px 6px;border:none;}
+.header_subsection {width: 100%; padding:6px 8px;background-color:#888; color:#fff;box-sizing:border-box;}
 .type_text { background-color: red; color: #fff; }
 .type_text { padding: 20px 22px; margin: 0; font-size: 18px; line-height: 24px; font-family: Georgia, serif;}
+#add_participant_btn {margin-left:0 !important;}
 
 /* Dashboard */
 .title {font-weight:normal; font-size: 0.8em;}
-.table_row td {padding: 5px 10px;}
-.td_eventName {background-color:#eee;}
-.td_eventGo {background-color:orangered;color:white;}
+.table_row td {padding: 8px 12px;background-color:#eee;}
+#td_eventName {background-color:#eee;}
+#td_eventGo {background-color:orangered;color:white;}
 #imageToUpload {display:none;}
+.header_dash {margin: 30px 0 8px 0;}
 .btn {width: 160px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none; font-size:1em;}
 .btn:hover {background-color: #555; text-decoration: none}
 #btn_addParticipantEvent {width: 160px;margin-left:0px !important;}
