--- a/public/style.css
+++ b/public/style.css
@@ -12,13 +12,21 @@ a:hover {text-decoration: underline;}
 .wrapper {margin: 0 auto; width: 80%;}
 
 /* Home page */
-#greeting {text-align: center;padding: 40px 0 0 0;font-family: 'Rammetto One', cursive; font-size: 1.9em;width: 80%; margin:0 auto;}
-#headline {color: orangered;display:block;padding: 0 0 20px 0;font-size: 1.2em;}
+#homeContainer {background-image: url(homepage_collage.jpg); background-size: 100vw; height: 100vh;}
+#greeting {text-align: center;padding: 40px 0 0 0;font-family: 'Montserrat', sans-serif; font-weight: 500;font-size: 1.9em;width: 80%; margin:0 auto;color:#0b2f49;}
+#greeting_logo {font-size: 1.2em;display: inline-block;}
+#elipsis {}
+#headline {color: #97163d;display:block;padding: 0 0 20px 0;font-size: 1.6em;}
+#home_btn_area {display:flex; margin: 60px auto 0 auto;justify-content: center;}
+#home_btns {display: flex;}
+#btn_signup {flex: 1;}
+#btn_login {margin: 0 0 0 30px;flex: 1;}
+.home_btn {vertical-align: middle;display:inline-block;border-radius: 20px;padding:22px 28px !important;}
 
 /* Nav */
-#logo {font-family: 'Merienda One', cursive; font-size: 2em;line-height: 1.2em;padding: 0 0 0 10px;}
+#logo {font-family: 'Montserrat', sans-serif; font-size: 3em;line-height: 1.2em;padding: 0 0 0 10px;margin: 10px 0}
 #logo_link:hover {text-decoration: none; color: #ddd;}
-.navBarContainer { margin: 0; display: flex; flex-direction: row; justify-content: space-between; background-color: #000; color: #fff; }
+.navBarContainer { margin: 0; display: flex; flex-direction: row; justify-content: space-between; background-color: #97163d; color: #fff; }
 .navBarHeader {margin-left: 5px;}
 .navBarLoginButtonContainer, .navBarLoggedInButtonContainer {margin: auto 0;}
 .navBarButtonList { list-style: none; display: flex; flex-direction: row; padding: 0 2em; }
@@ -55,7 +63,7 @@ a:hover {text-decoration: underline;}
 #td_eventGo {background-color:orangered;color:white;}
 #imageToUpload {display:none;}
 .header_dash {margin: 30px 0 8px 0;}
-.btn {width: 160px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none; font-size:1em;}
+.btn {width: 160px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none; font-size:1em;border-radius:8px;}
 .btn:hover {background-color: #555; text-decoration: none}
 #btn_addParticipantEvent {width: 160px;margin-left:0px !important;}
 .modal_btns {display: flex;}
@@ -93,6 +101,9 @@ margin-left: 10px;}
   .mobile_toggle {display:block;display:flex;}
   .mobile_toggle_active {flex-grow:1;background-color:gray;text-align: center;padding:20px;}
   .mobile_toggle_disabled {flex-grow:1;background-color:orangered; text-align:center;padding:20px}
-
-
+  #greeting {font-size: 1.5em;}
+  #home_btns {flex-direction: column;}
+  #btn_signup {}
+  #btn_login {margin: 14px 0 0 0;}
+  .home_btn {}
 }
