--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 html, body { margin: 0; }
-body { font-family: 'Roboto',sans-serif; margin: 0; font-size: 14px; box-sizing: border-box; }
+body { font-family: 'Montserrat', sans-serif; font-weight: 500; margin: 0; font-size: 14px; box-sizing: border-box; }
 img {image-orientation: from-image}
 a {text-decoration: none;}
 label {display: block;}
@@ -14,7 +14,7 @@ a:hover {text-decoration: underline;}
 /* Home page */
 #homeContainer {background-image: url(homepage_collage.jpg); background-size: 100vw; height: 100vh;}
 #greeting {text-align: center;padding: 40px 0 0 0;font-family: 'Montserrat', sans-serif; font-weight: 500;font-size: 1.9em;width: 80%; margin:0 auto;color:#0b2f49;}
-#greeting_logo {font-size: 1.2em;display: inline-block;}
+#greeting_logo {font-size: 1.2em;display: inline-block;font-weight: 900;}
 #elipsis {}
 #headline {color: #97163d;display:block;padding: 0 0 20px 0;font-size: 1.6em;}
 #home_btn_area {display:flex; margin: 60px auto 0 auto;justify-content: center;}
@@ -63,8 +63,8 @@ a:hover {text-decoration: underline;}
 #td_eventGo {background-color:orangered;color:white;}
 #imageToUpload {display:none;}
 .header_dash {margin: 30px 0 8px 0;}
-.btn {width: 160px; padding: 10px; background-color: #000;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none; font-size:1em;border-radius:8px;}
-.btn:hover {background-color: #555; text-decoration: none}
+.btn {width: 160px; padding: 10px; background-color: #0b2f49;display:block; margin: 0 0 8px 0; color: #fff; cursor: pointer;text-decoration: none;text-align: center;border:none;outline: none; font-size:1em;border-radius:8px;}
+.btn:hover {background-color: #11598e; text-decoration: none}
 #btn_addParticipantEvent {width: 160px;margin-left:0px !important;}
 .modal_btns {display: flex;}
 .dashboard-EventList-Container {display:flex;}
@@ -98,9 +98,9 @@ margin-left: 10px;}
 
 /*================================= Mobile ====================================*/
 @media only screen and (max-width:600px) {
-  .mobile_toggle {display:block;display:flex;}
-  .mobile_toggle_active {flex-grow:1;background-color:gray;text-align: center;padding:20px;}
-  .mobile_toggle_disabled {flex-grow:1;background-color:orangered; text-align:center;padding:20px}
+  .mobile_toggle {display:block;display:flex;color:#fff}
+  .mobile_toggle_active {flex-grow:1;background-color:#0b2f49;text-align: center;padding:20px;}
+  .mobile_toggle_disabled {flex-grow:1;background-color:#11598e; text-align:center;padding:20px}
   #greeting {font-size: 1.5em;}
   #home_btns {flex-direction: column;}
   #btn_signup {}
